Fix layer z-index

--- a/style/layouts/pages/sectionall.css
+++ b/style/layouts/pages/sectionall.css
@@ -6,7 +6,7 @@
   min-height: calc(100% - 4rem);
   background-color: var(--primary-bg-color);
   padding-top: 10rem;
-  z-index: 9;
+  z-index: 6;
   transition: var(--transition-three) var(--transition-five);
 }
 .section-all.active {
